
syntax = "proto3";

package ccprotos;

import "hyperledger.abchain.org/protos/crypto.proto";
import "google/protobuf/timestamp.proto";

//user can register a public key only if it has own some pais 
message RegPublicKey {
	string	  region = 2;
	bytes pkBytes = 3;
}

message RevokePublicKey {
	protos.PublicKey pk = 1;
}

message ActivePublicKey {
	bytes key = 1;
}

message Settings {
	bool  debugMode = 1;
	string regPrivilege = 2;
	string adminPrivilege = 3;
}

message RegGlobalData {
	string regPrivilege = 1;
	string adminPrivilege = 2;
	map<int32, string> chaincodes = 5;
	bytes  deployFlag = 10;
}

message RegData {
	protos.PublicKey pk = 1; 
	string 	  regTxid = 3;
	google.protobuf.Timestamp regTs = 4;
	string	  region = 5;
	bool	  enabled = 6;	  
	repeated  int32 authcodes = 10; //chaincode which user has allowed to invoked the base transaction from
}
